Fixed MCQ: Earlier was sending the data using the MCQ entity which was giving error during testing. Also this is a bad practice as it exposes the entity. Therefore used MCQResponse DTO instead of MCQ entity to share the data from one layer to another.