@@ -1,17 +1,18 @@
 package com.shivam.smartnotes.serviceimpl;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.shivam.smartnotes.dto.MCQItem;
 import com.shivam.smartnotes.dto.MCQResponse;
 import com.shivam.smartnotes.entity.Chunk;
 import com.shivam.smartnotes.entity.MCQ;
+import com.shivam.smartnotes.exceptions.InternalSeviceException;
+import com.shivam.smartnotes.exceptions.ResourceNotFoundException;
 import com.shivam.smartnotes.repository.ChunkRepository;
 import com.shivam.smartnotes.repository.MCQRepository;
 import com.shivam.smartnotes.service.EmbeddingService;
 import com.shivam.smartnotes.service.LLMService;
 import com.shivam.smartnotes.service.MCQService;
 import org.springframework.stereotype.Service;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
 
 import java.util.Comparator;
 import java.util.List;
@@ -21,11 +22,13 @@ import java.util.stream.IntStream;
 @Service
 public class MCQServiceImpl implements MCQService {
 
-    private static final int TOP_K_CHUNKS=5;
+    private static final int TOP_K_CHUNKS = 5;
+
     private final ChunkRepository chunkRepository;
     private final MCQRepository mcqRepository;
     private final EmbeddingService embeddingService;
     private final LLMService llmService;
+
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     public MCQServiceImpl(ChunkRepository chunkRepository,
@@ -39,32 +42,32 @@ public class MCQServiceImpl implements MCQService {
     }
 
     @Override
-    public List<MCQ> generateMcqs(Long userId, String topic, int count) {
+    public MCQResponse generateMcqs(Long userId, String topic, int count) {
 
-        String topicEmbedding =
-                embeddingService.generateEmbedding(topic);
+        String topicEmbedding = embeddingService.generateEmbedding(topic);
 
         List<Chunk> userChunks =
-                chunkRepository.findByNotes_User_UserId(userId);
+                chunkRepository.findByNote_Owner_UserId(userId);
 
         if (userChunks.isEmpty()) {
-            throw new RuntimeException("No notes found for user");
+            throw new ResourceNotFoundException("No notes found for user");
         }
 
         List<Chunk> topChunks =
                 userChunks.stream()
                         .sorted(Comparator.comparingDouble(
-                                (Chunk chunk) -> embeddingService.cosineSimilarity(
-                                        chunk.getEmbedding(),
+                                        (Chunk c) -> embeddingService.cosineSimilarity(
+                                        c.getEmbedding(),
                                         topicEmbedding
                                 )
                         ).reversed())
                         .limit(TOP_K_CHUNKS)
-                        .collect(Collectors.toList());
+                        .toList();
 
-
-        if(topChunks.isEmpty()){
-            throw  new RuntimeException("No relevant chunks found for this topic"+topic);
+        if (topChunks.isEmpty()) {
+            throw new ResourceNotFoundException(
+                    "No relevant chunks found for topic: " + topic
+            );
         }
 
         String context =
@@ -72,26 +75,22 @@ public class MCQServiceImpl implements MCQService {
                         .map(Chunk::getChunkText)
                         .collect(Collectors.joining("\n\n"));
 
-
-        //here two things needs to be done 1)SystemPrompt and 2)UserPrompt
-        //They will be set to the LLM using service layer of LLM
-
-        String systemPrompt=
-                "You are an expert educational content generator."+
+        String systemPrompt =
+                "You are an expert educational content generator. " +
                         "Generate high quality MCQs strictly from provided content.";
 
-        String userPrompt=
+        String userPrompt =
                 """
                 Context:
                 "%s"
-                
-                Generate %d MCQs on topic:"%s".
-                
+
+                Generate %d MCQs on topic: "%s".
+
                 Rules:
-                1)Exactly 4 options for each question.
-                2)One correct answer only.
-                3)Output only valid JSON.
-                
+                1) Exactly 4 options.
+                2) One correct answer.
+                3) Output ONLY valid JSON.
+
                 JSON format:
                 {
                   "topic": "%s",
@@ -104,70 +103,97 @@ public class MCQServiceImpl implements MCQService {
                     }
                   ]
                 }
-                
-                """.formatted(context,count,topic,topic);
+                """.formatted(context, count, topic, topic);
 
-        String rawResponse=llmService.generate(systemPrompt,userPrompt);
+        String rawResponse =
+                llmService.generate(systemPrompt, userPrompt);
 
-        MCQResponse response;
-        try{
-            response=objectMapper.readValue(rawResponse,MCQResponse.class);
+        MCQResponse parsedResponse;
+        try {
+            parsedResponse =
+                    objectMapper.readValue(rawResponse, MCQResponse.class);
+        } catch (Exception e) {
+            throw new InternalSeviceException("Failed to parse LLM response");
         }
-        catch (Exception e){
-            throw new RuntimeException("Parsing of LLM Response failed");
-        }
 
-        validateResponse(response,count);
-        List<MCQItem> items = response.getMcqs();
+        validateResponse(parsedResponse, count);
 
-        List<MCQ> mcqs =
+        List<MCQItem> items = parsedResponse.getMcqs();
+
+        List<MCQ> mcqEntities =
                 IntStream.range(0, items.size())
                         .mapToObj(i -> {
-                            Chunk chunk = topChunks.get(i % topChunks.size());
+                            Chunk chunk =
+                                    topChunks.get(i % topChunks.size());
                             return toEntity(items.get(i), topic, chunk);
                         })
-                        .collect(Collectors.toList());
+                        .toList();
 
-        mcqRepository.saveAll(mcqs);
-        return mcqs;
+        mcqRepository.saveAll(mcqEntities);
+
+        // ✅ RETURN DTO (NOT ENTITIES)
+        MCQResponse finalResponse = new MCQResponse();
+        finalResponse.setTopic(topic);
+        finalResponse.setMcqs(items);
+
+        return finalResponse;
     }
 
     @Override
-    public List<MCQ> getMcqsByTopic(Long userId, String topic) {
+    public MCQResponse getMcqsByTopic(Long userId, String topic) {
 
         List<MCQ> mcqs =
-                mcqRepository.findByTopicAndNotes_User_UserId(
+                mcqRepository.findByTopicAndNote_Owner_UserId(
                         topic,
                         userId
                 );
 
         if (mcqs.isEmpty()) {
-            throw new RuntimeException(
+            throw new ResourceNotFoundException(
                     "No MCQs found for topic: " + topic
             );
         }
-        return mcqs;
+
+        List<MCQItem> items =
+                mcqs.stream()
+                        .map(mcq -> {
+                            MCQItem item = new MCQItem();
+                            item.setQuestion(mcq.getQuestion());
+                            item.setOptions(mcq.getOptions());
+                            item.setCorrectOptionIndex(
+                                    mcq.getCorrectOptionIndex()
+                            );
+                            item.setExplanation(mcq.getExplanation());
+                            return item;
+                        })
+                        .toList();
+
+        MCQResponse response = new MCQResponse();
+        response.setTopic(topic);
+        response.setMcqs(items);
+
+        return response;
     }
 
     private void validateResponse(MCQResponse response, int count) {
         if (response.getMcqs() == null ||
-            response.getMcqs().size() != count) {
-            throw new RuntimeException("Invalid MCQ count from LLM");
+                response.getMcqs().size() != count) {
+            throw new InternalSeviceException("Invalid MCQ count from LLM");
         }
 
         for (MCQItem m : response.getMcqs()) {
             if (m.getOptions().size() != 4 ||
-                m.getCorrectOptionIndex() < 0 ||
-                m.getCorrectOptionIndex() > 3) {
-                throw new RuntimeException("Invalid MCQ structure");
+                    m.getCorrectOptionIndex() < 0 ||
+                    m.getCorrectOptionIndex() > 3) {
+                throw new InternalSeviceException("Invalid MCQ structure");
             }
         }
     }
-    private MCQ toEntity(
-            MCQItem dto,
-            String topic,
-            Chunk sourceChunk
-    ) {
+
+    private MCQ toEntity(MCQItem dto,
+                         String topic,
+                         Chunk sourceChunk) {
+
         return new MCQ(
                 topic,
                 dto.getQuestion(),
